; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_saquery.c_find_query_by_type.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_saquery.c_find_query_by_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.query_cmd = type { i64, i64 }

@query_cmds = common dso_local global %struct.query_cmd* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.query_cmd* (i64)* @find_query_by_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.query_cmd* @find_query_by_type(i64 %0) #0 {
  %2 = alloca %struct.query_cmd*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.query_cmd*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load %struct.query_cmd*, %struct.query_cmd** @query_cmds, align 8
  store %struct.query_cmd* %5, %struct.query_cmd** %4, align 8
  br label %6

6:                                                ; preds = %20, %1
  %7 = load %struct.query_cmd*, %struct.query_cmd** %4, align 8
  %8 = getelementptr inbounds %struct.query_cmd, %struct.query_cmd* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %23

11:                                               ; preds = %6
  %12 = load %struct.query_cmd*, %struct.query_cmd** %4, align 8
  %13 = getelementptr inbounds %struct.query_cmd, %struct.query_cmd* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %3, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load %struct.query_cmd*, %struct.query_cmd** %4, align 8
  store %struct.query_cmd* %18, %struct.query_cmd** %2, align 8
  br label %24

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19
  %21 = load %struct.query_cmd*, %struct.query_cmd** %4, align 8
  %22 = getelementptr inbounds %struct.query_cmd, %struct.query_cmd* %21, i32 1
  store %struct.query_cmd* %22, %struct.query_cmd** %4, align 8
  br label %6

23:                                               ; preds = %6
  store %struct.query_cmd* null, %struct.query_cmd** %2, align 8
  br label %24

24:                                               ; preds = %23, %17
  %25 = load %struct.query_cmd*, %struct.query_cmd** %2, align 8
  ret %struct.query_cmd* %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
